<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_16">

    <TextView
        android:id="@+id/tvDisplayAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:text="@string/display_all"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tvTeam1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:text="@string/team_1"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayAll"
        />

    <TextView
        android:id="@+id/tvTeam2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/team_2"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/tvTeam1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>